2006-08-13  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JList.java
	(getScrollableUnitIncrement): Fixed direction. Implemented
	horizontal scrolling. Improved usability.
	(getScrollableBlockIncrement): Fixed direction. Improved usability.

2006-08-13  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/basic/BasicScrollBarUI.java
	(scrollByUnit): Scroll by -unit when direction is not positive
	and +unit otherwise.
	(scrollByBlock): Scroll by -unit when direction is not positive
	and +unit otherwise.

2006-08-13  Roman Kennke  <kennke@aicas.com>

	PR 28028
	* javax/swing/text/PlainView.java
	(paint): Limit painted area to the lines inside the clip
	and allocation.

2006-08-13  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/basic/BasicTextUI.java
	(uninstallListeners): Unregister document listener.

2006-08-13  Sven de Marothy  <sven@physto.se>

	* java/util/Locale.java
	(hashcodeCache): New field.
	(hashCode): use the above field instead of the serialized one
	(writeObject): Removed method.
	(readObject): Intern strings.
	(equals): Revert to previous method.

2006-08-13  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JTabbedPane.java
	(JTabbedPane): Call setModel() here and let this install the
	change listener correctly.
	(setModel): Correctly uninstall and reinstall ChangeListener when
	model changes.

2006-08-13  Raif S. Naffah  <raif@swiftdsl.com.au>

	PR Classpath/23952
	* java/util/ResourceBundle.java (CACHE_SIZE): New constant.
	(bundleCache): Replaced with an LRU of CACHE_SIZE elements.
	(lastDefaultLocale): Removed.
	(emptyLocale): Likewise.
	(BundleKey.defaultLocale): New field.
	(BundleKey.BundleKey): Add a Locale (as a 1st positional) argument.
	(BundleKey.set): Likewise.
	(BundleKey.equals): Take defaultLocal field into consideration.
	(getBundle(String, Locale, ClassLoader)): Use updated BundleKey and LRU.

2006-08-13  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JMenu.java